--- a/resume1.html
+++ b/resume1.html
@@ -79,7 +79,7 @@
 
     <!-- 头像 -->
     <div class="resume-avatar">
-      < img src="img" alt="头像">
+      < img src="img.png" alt="头像">
     </div>
 
     <!-- 求职意向 -->
