--- a/balloons.html
+++ b/balloons.html
@@ -8,65 +8,74 @@
         body {
             margin: 0;
             overflow: hidden;
-            background-color: #e0f7fa;
         }
 
-       .balloon {
-            position: absolute;
-            width: 30px;
-            height: 40px;
-            border-radius: 50%;
-            animation: floatUp 10s linear infinite;
-        }
-
-        @keyframes floatUp {
-            0% {
-                transform: translateY(100vh);
-            }
-            100% {
-                transform: translateY(-100%);
-            }
+        canvas {
+            display: block;
         }
     </style>
 </head>
 
 <body>
-    <div id="balloons"></div>
+    <canvas id="balloonCanvas"></canvas>
     <script>
-        const numVisibleBalloons = 500; 
-        const colors = ['#ff6b6b', '#f8b195', '#f67280', '#c06c84', '#6c5b7b', '#355c7d'];
-        const balloonsContainer = document.getElementById('balloons');
+        const canvas = document.getElementById('balloonCanvas');
+        const ctx = canvas.getContext('2d');
+        const numBalloons = 1000000;
+        const colors = ['#FF6347', '#FF8C00', '#FFD700', '#32CD32', '#1E90FF', '#9370DB', '#FF1493'];
+        const balloons = [];
+        const releaseInterval = 10; 
+        let releaseCount = 0;
 
-        function createBalloon() {
-            const balloon = document.createElement('div');
-            balloon.classList.add('balloon');
-            balloon.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
-            balloon.style.left = Math.random() * 100 + 'vw';
-            balloon.style.animationDuration = (Math.random() * 5 + 5) + 's';
-            balloon.style.animationDelay = Math.random() * 10 + 's';
-            return balloon;
+        function resizeCanvas() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
         }
 
-        for (let i = 0; i < numVisibleBalloons; i++) {
-            const balloon = createBalloon();
-            balloonsContainer.appendChild(balloon);
-        }
+        window.addEventListener('resize', resizeCanvas);
+        resizeCanvas();
 
-        function resetBalloon(balloon) {
-            balloon.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
-            balloon.style.left = Math.random() * 100 + 'vw';
-            balloon.style.animationDuration = (Math.random() * 5 + 5) + 's';
-            balloon.style.animationDelay = 0;
-            balloon.offsetHeight; 
-            balloon.style.animationDelay = Math.random() * 10 + 's';
-        }
-
-        balloonsContainer.addEventListener('animationiteration', function (e) {
-            if (e.target.classList.contains('balloon')) {
-                resetBalloon(e.target);
+        class Balloon {
+            constructor() {
+                this.x = Math.random() * canvas.width;
+                this.y = canvas.height + Math.random() * 200;
+                this.radius = Math.random() * 10 + 5;
+                this.color = colors[Math.floor(Math.random() * colors.length)];
+                this.speed = Math.random() * 2 + 1;
             }
-        });
 
+            draw() {
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+                ctx.fillStyle = this.color;
+                ctx.fill();
+            }
+
+            update() {
+                this.y -= this.speed;
+                if (this.y < -this.radius) {
+                    this.y = canvas.height + Math.random() * 200;
+                    this.x = Math.random() * canvas.width;
+                }
+            }
+        }
+
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            for (let i = 0; i < balloons.length; i++) {
+                balloons[i].draw();
+                balloons[i].update();
+            }
+
+            if (releaseCount % releaseInterval === 0 && balloons.length < numBalloons) {
+                balloons.push(new Balloon());
+            }
+            releaseCount++;
+
+            requestAnimationFrame(animate);
+        }
+
+        animate();
     </script>
 </body>
 
